egglog-experimental/tests/snapshots/files__shared_snapshot_rules_ee_desugared.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
((A 1)
 (B 1)
 (Pair 1)
 (X 1)
 (Y 1))
