egglog-experimental/tests/snapshots/files__shared_snapshot_rules_nee_desugared.snap
---
source: egglog-experimental/tests/files.rs
expression: snapshot
---
((A 1)
 (B 1)
 (Pair 1)
 (X 1)
 (Y 1)
 (___disequality-contradiction 1)
 (___disequality-ne-Other 1)
 (___disequality-ne-Term 1))
